media/heimdall/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heimdall
  namespace: media
  annotations:
    flux.weave.works/tag.heimdall: glob:amd64-*-ls*
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
      - name: config
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:heimdall
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      containers:
      - name: heimdall
        image: linuxserver/heimdall:amd64-2.1.13-ls39
        volumeMounts:
        - name: config
          mountPath: /config
        ports:
        - containerPort: 80
          name: heimdall-http
        - containerPort: 443
          name: heimdall-https
