media/heimdall/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: heimdall
  namespace: media
  annotations:
    fluxcd.io/automated: 'true'
    fluxcd.io/tag.heimdall: 'regex:^2\.[0-9\.]+-ls[0-9]+$'
spec:
  serviceName: heimdall
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
      - name: config
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:heimdall
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      containers:
      - name: heimdall
        image: linuxserver/heimdall:2.2.2-ls105
        volumeMounts:
        - name: config
          mountPath: /config
        ports:
        - containerPort: 80
          name: heimdall-http
        - containerPort: 443
          name: heimdall-https
