media/heimdall/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: media
spec:
  selector:
    app: heimdall
    version: v1
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
