media/heimdall/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/auth-tls-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "optional"
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - xn--st9h.desertbluffs.com
  rules:
    - host: xn--st9h.desertbluffs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall
                port:
                  name: https
