media/heimdall/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: heimdall
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: heimdall
  ingress:
  - ports:
    - port: 80
    - port: 443
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
